TEIID-19 TEIID-492 update of reference handling and various cleanups of processing.  reviewed by RR